force-app/main/default/objects/LimitSnapshot__c/LimitSnapshot__c.object-meta.xml
<CustomObject>
    <description>Snapshots of each limit</description>
    <label>Limit Snapshot</label>
    <nameField>
        
        <displayFormat>LS-{0000}</displayFormat>
        
        <label>Limit Snapshot Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Limit Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>