force-app/main/default/objects/LimitSnapshot__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <label>Limit</label>
    <referenceTo>Limit__c</referenceTo>
    <relationshipLabel>Limit Snapshots</relationshipLabel>
    <relationshipName>Limit_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>