force-app/main/default/objects/LimitSnapshot__c/fields/MaximumValue__c.field-meta.xml
<CustomField>
    <fullName>MaximumValue__c</fullName>
    <inlineHelpText>The maximum value for the org at the time of the snapshot</inlineHelpText>
    <label>Maximum Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>