force-app/main/default/objects/LimitSnapshot__c/fields/PastRetentionPeriod__c.field-meta.xml
<CustomField>
    <fullName>PastRetentionPeriod__c</fullName>
    <formula>CreatedDate &lt;  (NOW() -  Limit__r.SnapshotRetentionDays__c)</formula>
    <label>Past Retention Period</label>
    <type>Checkbox</type>
</CustomField>