force-app/main/default/objects/LimitSnapshot__c/fields/PercentChangedSinceLastSnapshot__c.field-meta.xml
<CustomField>
    <fullName>PercentChangedSinceLastSnapshot__c</fullName>
    <label>Percent Changed Since Last Snapshot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>