force-app/main/default/objects/LimitSnapshot__c/fields/PercentOfLimit__c.field-meta.xml
<CustomField>
    <fullName>PercentOfLimit__c</fullName>
    <formula>Value__c /  MaximumValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percent of the limit used in the org at time of snapshot</inlineHelpText>
    <label>Percent of Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>