force-app/main/default/objects/LimitSnapshot__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>The current value of the limit at the time of the snapshot</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>